--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19.4)
 
-set(This VultrDemo)
+set(This Gameplay)
 
 project(${This} VERSION 0.1.0)
 
@@ -8,22 +8,22 @@ project(${This} VERSION 0.1.0)
 enable_testing()
 
 file(
-		GLOB_RECURSE Sources
-		"src/sources.cpp"
+  GLOB_RECURSE Sources
+  "src/sources.cpp"
 )
 
 include_directories(src vendor vendor/VultrCore/src vendor/VultrCore/vendor)
 
-if (UNIX)
-	set(CMAKE_CXX_STANDARD 20)
-endif (UNIX)
+if(UNIX)
+  set(CMAKE_CXX_STANDARD 20)
+endif(UNIX)
 
-if (WIN32)
-	add_compile_options("/std:c++latest")
-	add_compile_options("/Zc:preprocessor")
+if(WIN32)
+  add_compile_options("/std:c++latest")
+  add_compile_options("/Zc:preprocessor")
 
-	set(CMAKE_CXX_STANDARD 20)
-endif (WIN32)
+  set(CMAKE_CXX_STANDARD 20)
+endif(WIN32)
 
 
 add_subdirectory(vendor/VultrCore)
@@ -39,6 +39,6 @@ target_include_directories(${This} PUBLIC ${TargetIncludeDirs})
 
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 
-if (UNIX)
-	set(CMAKE_CXX_FLAGS "-Wno-reorder -Wno-volatile -Wno-deprecated-enum-enum-conversion")
-endif (UNIX)
+if(UNIX)
+  set(CMAKE_CXX_FLAGS "-Wno-reorder -Wno-volatile -Wno-deprecated-enum-enum-conversion")
+endif(UNIX)
