--- a/imgui.ini
+++ b/imgui.ini
@@ -3,10 +3,10 @@ Size=3840,2160
 Collapsed=0
 
 [Window][Game]
-Pos=336,36
-Size=3104,1404
+Pos=0,36
+Size=3440,1404
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x0556E627,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -37,20 +37,19 @@ Size=3440,1440
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=0,36
-Size=334,1404
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Inspector]
-Pos=0,36
-Size=334,1404
+Pos=255,103
+Size=620,1296
 Collapsed=0
 DockId=0x00000001,1
 
+[Window][Inspector]
+Pos=255,103
+Size=620,1296
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
-DockSpace   ID=0x0556E627 Window=0x853E1CFC Pos=0,36 Size=3440,1404 Split=X Selected=0x26816F31
-  DockNode  ID=0x00000001 Parent=0x0556E627 SizeRef=334,2024 Selected=0xE7039252
-  DockNode  ID=0x00000002 Parent=0x0556E627 SizeRef=3452,2024 CentralNode=1 Selected=0x26816F31
-DockSpace   ID=0x6EE41963 Pos=0,36 Size=3840,2124 CentralNode=1 Selected=0x26816F31
+DockNode  ID=0x00000001 Pos=255,103 Size=620,1296 Selected=0x29EABFBD
+DockSpace ID=0x0556E627 Window=0x853E1CFC Pos=0,36 Size=3440,1404 CentralNode=1 Selected=0x26816F31
+DockSpace ID=0x6EE41963 Pos=0,36 Size=3840,2124 CentralNode=1 Selected=0x26816F31
 
