--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,22 +8,20 @@ project(${This} VERSION 0.1.0)
 enable_testing()
 
 file(
-  GLOB_RECURSE Sources
-  "src/sources.cpp"
+        GLOB_RECURSE Sources
+        "src/sources.cpp"
 )
 
 include_directories(src vendor vendor/VultrCore/src vendor/VultrCore/vendor)
 
-if(UNIX)
-  set(CMAKE_CXX_STANDARD 20)
-endif(UNIX)
 
-if(WIN32)
-  add_compile_options("/std:c++latest")
-  add_compile_options("/Zc:preprocessor")
+if (WIN32)
+    add_compile_options("/std:c++latest")
+    add_compile_options("/Zc:preprocessor")
+endif (WIN32)
 
-  set(CMAKE_CXX_STANDARD 20)
-endif(WIN32)
+set(CMAKE_CXX_STANDARD 20)
+add_compile_options("-Wno-reorder" "-Wno-deprecated-enum-enum-conversion" "-Wgnu-array-member-paren-init")
 
 
 add_subdirectory(vendor/VultrCore)
@@ -37,8 +35,4 @@ set_target_properties(Vultr PROPERTIES POSITION_INDEPENDENT_CODE ON)
 target_link_libraries(${This} PUBLIC ${Libs})
 target_include_directories(${This} PUBLIC ${TargetIncludeDirs})
 
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
-
-if(UNIX)
-  set(CMAKE_CXX_FLAGS "-Wno-reorder -Wno-volatile -Wno-deprecated-enum-enum-conversion")
-endif(UNIX)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG -ftime-trace")
