--- a/imgui.ini
+++ b/imgui.ini
@@ -3,10 +3,10 @@ Size=3840,2160
 Collapsed=0
 
 [Window][Game]
-Pos=0,36
-Size=3440,1404
+Pos=457,36
+Size=2167,941
 Collapsed=0
-DockId=0x0556E627,0
+DockId=0x00000002,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -14,10 +14,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,36
-Size=3840,2124
+Pos=2626,740
+Size=814,700
 Collapsed=0
-DockId=0x6EE41963,1
+DockId=0x00000008,0
 
 [Window][Example: Custom rendering]
 Pos=0,36
@@ -37,19 +37,32 @@ Size=3440,1440
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=255,103
-Size=620,1296
+Pos=0,36
+Size=455,1404
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x00000004,0
 
 [Window][Inspector]
-Pos=255,103
-Size=620,1296
+Pos=2626,36
+Size=814,702
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,0
+
+[Window][Asset Browser]
+Pos=457,979
+Size=2167,461
+Collapsed=0
+DockId=0x00000005,0
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=255,103 Size=620,1296 Selected=0x29EABFBD
-DockSpace ID=0x0556E627 Window=0x853E1CFC Pos=0,36 Size=3440,1404 CentralNode=1 Selected=0x26816F31
-DockSpace ID=0x6EE41963 Pos=0,36 Size=3840,2124 CentralNode=1 Selected=0x26816F31
+DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,36 Size=3440,1404 Split=X Selected=0x26816F31
+  DockNode      ID=0x00000004 Parent=0x0556E627 SizeRef=455,1404 Selected=0x29EABFBD
+  DockNode      ID=0x00000006 Parent=0x0556E627 SizeRef=2983,1404 Split=X
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=2624,1404 Split=Y
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=3440,941 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=3440,461 Selected=0x6F7CD859
+    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=814,1404 Split=Y Selected=0xE7039252
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=814,702 Selected=0xE7039252
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=814,700 Selected=0xE87781F4
+DockSpace       ID=0x6EE41963 Pos=0,36 Size=3840,2124 CentralNode=1 Selected=0x26816F31
 
