Added fully working scene

--- a/imgui.ini
+++ b/imgui.ini
@@ -54,6 +54,83 @@ Size=2167,461
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Delete?]
+Pos=1564,661
+Size=311,118
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=1515,634
+Size=546,225
+Collapsed=0
+
+[Window][Stacked 2]
+Pos=1607,684
+Size=226,71
+Collapsed=0
+
+[Window][Invalid Resource Popup]
+Pos=1810,1036
+Size=219,88
+Collapsed=0
+
+[Window][Resource Not Imported]
+Pos=1687,1036
+Size=465,88
+Collapsed=0
+
+[Window][Invalid Resource]
+Pos=1610,676
+Size=219,88
+Collapsed=0
+
+[Window][Example: Console]
+Pos=457,36
+Size=2167,941
+Collapsed=0
+DockId=0x00000002,1
+
+[Window][Import]
+Pos=1572,684
+Size=228,116
+Collapsed=0
+
+[Window][Cannot Save When Playing]
+Pos=1508,676
+Size=423,88
+Collapsed=0
+
+[Window][Import Error]
+Pos=1617,676
+Size=251,129
+Collapsed=0
+
+[Window][No Scene Open]
+Pos=1452,676
+Size=535,88
+Collapsed=0
+
+[Window][Hot Reloading Game...]
+Pos=1600,696
+Size=240,48
+Collapsed=0
+
+[Table][0x49F8DCEA,3]
+RefScale=13
+Column 0  Weight=1.0000
+Column 1  Width=84
+Column 2  Width=126
+
+[Table][0x45A0E60D,7]
+RefScale=13
+Column 0  Width=49
+Column 1  Width=112
+Column 2  Width=112
+Column 3  Width=112
+Column 4  Width=112
+Column 5  Width=112
+Column 6  Width=112
+
 [Docking][Data]
 DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,36 Size=3440,1404 Split=X Selected=0x26816F31
   DockNode      ID=0x00000004 Parent=0x0556E627 SizeRef=455,1404 Selected=0x29EABFBD
