--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Collapsed=0
 
 [Window][Game]
 Pos=457,40
-Size=2167,937
+Size=2167,845
 Collapsed=0
 DockId=0x00000002,0
 
@@ -49,10 +49,10 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Asset Browser]
-Pos=457,979
-Size=2167,461
+Pos=457,887
+Size=2167,553
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000009,0
 
 [Window][Delete?]
 Pos=1564,661
@@ -97,7 +97,7 @@ Collapsed=0
 
 [Window][Cannot Save When Playing]
 Pos=1508,676
-Size=423,88
+Size=672,187
 Collapsed=0
 
 [Window][Import Error]
@@ -135,9 +135,9 @@ Column 6  Width=112
 DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,40 Size=3440,1400 Split=X Selected=0x26816F31
   DockNode      ID=0x00000004 Parent=0x0556E627 SizeRef=455,1404 Selected=0x29EABFBD
   DockNode      ID=0x00000006 Parent=0x0556E627 SizeRef=2983,1404 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=2624,1404 Split=Y
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=3440,941 CentralNode=1 Selected=0x26816F31
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=3440,461 Selected=0x6F7CD859
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=2624,1404 Split=Y Selected=0x26816F31
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=2167,845 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=2167,553 Selected=0x6F7CD859
     DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=814,1404 Split=Y Selected=0xE7039252
       DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=814,702 Selected=0xE7039252
       DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=814,700 Selected=0xE87781F4
