--- a/imgui.ini
+++ b/imgui.ini
@@ -4,9 +4,9 @@ Collapsed=0
 
 [Window][Game]
 Pos=457,40
-Size=2141,1349
+Size=2141,931
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000002,0
 
 [Window][Debug##Default]
 Pos=60,60
@@ -49,10 +49,10 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Asset Browser]
-Pos=2600,716
-Size=814,673
+Pos=457,973
+Size=2141,416
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000009,0
 
 [Window][Delete?]
 Pos=1564,661
@@ -88,7 +88,7 @@ Collapsed=0
 Pos=457,36
 Size=2167,941
 Collapsed=0
-DockId=0x00000003,1
+DockId=0x00000002,1
 
 [Window][Import]
 Pos=1565,886
@@ -115,6 +115,11 @@ Pos=1600,696
 Size=240,48
 Collapsed=0
 
+[Window][Importing Resources]
+Pos=876,639
+Size=820,276
+Collapsed=0
+
 [Table][0x49F8DCEA,3]
 RefScale=13
 Column 0  Weight=1.0000
@@ -135,9 +140,11 @@ Column 6  Width=112
 DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,40 Size=3414,1349 Split=X Selected=0x26816F31
   DockNode      ID=0x00000004 Parent=0x0556E627 SizeRef=455,1404 Selected=0x29EABFBD
   DockNode      ID=0x00000006 Parent=0x0556E627 SizeRef=2983,1404 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=2624,1404 CentralNode=1 Selected=0x26816F31
+    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=2624,1404 Split=Y Selected=0x26816F31
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=2141,931 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=2141,416 Selected=0x6F7CD859
     DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=814,1404 Split=Y Selected=0xE7039252
       DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=814,702 Selected=0xE7039252
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=814,700 Selected=0x6F7CD859
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=814,700 Selected=0xE87781F4
 DockSpace       ID=0x6EE41963 Pos=0,36 Size=3840,2124 CentralNode=1 Selected=0x26816F31
 
