Made shader creation more terse and no longer repetitive with more engine built-ins

--- a/imgui.ini
+++ b/imgui.ini
@@ -116,8 +116,13 @@ Size=240,48
 Collapsed=0
 
 [Window][Importing Resources]
-Pos=876,639
+Pos=452,640
 Size=820,276
+Collapsed=0
+
+[Window][Failed to import resources!]
+Pos=250,423
+Size=1311,667
 Collapsed=0
 
 [Table][0x49F8DCEA,3]
