Import setting changes and other improvements

--- a/imgui.ini
+++ b/imgui.ini
@@ -3,8 +3,8 @@ Size=3840,2160
 Collapsed=0
 
 [Window][Game]
-Pos=457,40
-Size=2141,911
+Pos=457,67
+Size=1790,1155
 Collapsed=0
 DockId=0x00000002,0
 
@@ -14,10 +14,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=2600,716
-Size=814,673
+Pos=0,1247
+Size=455,413
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000009,0
 
 [Window][Example: Custom rendering]
 Pos=0,36
@@ -33,24 +33,24 @@ DockId=0x6EE41963,2
 
 [Window][VultrDockspace]
 Pos=0,0
-Size=3414,1389
+Size=2956,1660
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=0,40
-Size=455,1349
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][Inspector]
-Pos=2600,40
-Size=814,674
+Pos=0,67
+Size=455,1178
 Collapsed=0
 DockId=0x00000007,0
 
+[Window][Inspector]
+Pos=2249,67
+Size=707,1593
+Collapsed=0
+DockId=0x00000003,0
+
 [Window][Asset Browser]
-Pos=457,953
-Size=2141,436
+Pos=457,1224
+Size=1790,436
 Collapsed=0
 DockId=0x00000005,0
 
@@ -116,13 +116,13 @@ Size=240,48
 Collapsed=0
 
 [Window][Importing Resources]
-Pos=694,680
+Pos=3,605
 Size=1002,332
 Collapsed=0
 
 [Window][Failed to import resources!]
-Pos=207,420
-Size=1311,667
+Pos=3,494
+Size=1720,664
 Collapsed=0
 
 [Table][0x49F8DCEA,3]
@@ -142,14 +142,14 @@ Column 5  Width=112
 Column 6  Width=112
 
 [Docking][Data]
-DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,40 Size=3414,1349 Split=X Selected=0x26816F31
-  DockNode      ID=0x00000004 Parent=0x0556E627 SizeRef=455,1404 Selected=0x29EABFBD
-  DockNode      ID=0x00000006 Parent=0x0556E627 SizeRef=2983,1404 Split=X
-    DockNode    ID=0x00000003 Parent=0x00000006 SizeRef=2624,1404 Split=Y Selected=0x26816F31
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=1458,911 CentralNode=1 Selected=0x26816F31
-      DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=1458,436 Selected=0x6F7CD859
-    DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=814,1404 Split=Y Selected=0xE7039252
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=814,702 Selected=0xE7039252
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=814,700 Selected=0xE87781F4
+DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,67 Size=2956,1593 Split=X Selected=0x26816F31
+  DockNode      ID=0x00000001 Parent=0x0556E627 SizeRef=1653,1192 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=455,1404 Split=Y Selected=0x29EABFBD
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=455,921 Selected=0x29EABFBD
+      DockNode  ID=0x00000009 Parent=0x00000004 SizeRef=455,323 Selected=0xE87781F4
+    DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=2983,1404 Split=Y
+      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=1458,911 CentralNode=1 Selected=0x26816F31
+      DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=1458,436 Selected=0x6F7CD859
+  DockNode      ID=0x00000003 Parent=0x0556E627 SizeRef=707,1192 Selected=0xE7039252
 DockSpace       ID=0x6EE41963 Pos=0,36 Size=3840,2124 CentralNode=1 Selected=0x26816F31
 
