--- a/imgui.ini
+++ b/imgui.ini
@@ -3,8 +3,8 @@ Size=3840,2160
 Collapsed=0
 
 [Window][Game]
-Pos=457,67
-Size=1790,1155
+Pos=457,40
+Size=755,605
 Collapsed=0
 DockId=0x00000002,0
 
@@ -14,8 +14,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=0,1247
-Size=455,413
+Pos=0,813
+Size=455,270
 Collapsed=0
 DockId=0x00000009,0
 
@@ -33,24 +33,24 @@ DockId=0x6EE41963,2
 
 [Window][VultrDockspace]
 Pos=0,0
-Size=2956,1660
+Size=1921,1083
 Collapsed=0
 
 [Window][Hierarchy]
-Pos=0,67
-Size=455,1178
+Pos=0,40
+Size=455,771
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Inspector]
-Pos=2249,67
-Size=707,1593
+Pos=1214,40
+Size=707,601
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000008,0
 
 [Window][Asset Browser]
-Pos=457,1224
-Size=1790,436
+Pos=457,647
+Size=755,436
 Collapsed=0
 DockId=0x00000005,0
 
@@ -116,14 +116,20 @@ Size=240,48
 Collapsed=0
 
 [Window][Importing Resources]
-Pos=3,605
+Pos=3,101
 Size=1002,332
 Collapsed=0
 
 [Window][Failed to import resources!]
-Pos=3,494
+Pos=3,155
 Size=1720,664
 Collapsed=0
+
+[Window][Asset Inspector]
+Pos=1214,643
+Size=707,440
+Collapsed=0
+DockId=0x0000000A,0
 
 [Table][0x49F8DCEA,3]
 RefScale=13
@@ -142,7 +148,7 @@ Column 5  Width=112
 Column 6  Width=112
 
 [Docking][Data]
-DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,67 Size=2956,1593 Split=X Selected=0x26816F31
+DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,40 Size=1921,1043 Split=X Selected=0x26816F31
   DockNode      ID=0x00000001 Parent=0x0556E627 SizeRef=1653,1192 Split=X
     DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=455,1404 Split=Y Selected=0x29EABFBD
       DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=455,921 Selected=0x29EABFBD
@@ -150,6 +156,8 @@ DockSpace       ID=0x0556E627 Window=0x853E1CFC Pos=0,67 Size=2956,1593 Split=X 
     DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=2983,1404 Split=Y
       DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=1458,911 CentralNode=1 Selected=0x26816F31
       DockNode  ID=0x00000005 Parent=0x00000006 SizeRef=1458,436 Selected=0x6F7CD859
-  DockNode      ID=0x00000003 Parent=0x0556E627 SizeRef=707,1192 Selected=0xE7039252
+  DockNode      ID=0x00000003 Parent=0x0556E627 SizeRef=707,1192 Split=Y Selected=0xE7039252
+    DockNode    ID=0x00000008 Parent=0x00000003 SizeRef=707,918 Selected=0xE7039252
+    DockNode    ID=0x0000000A Parent=0x00000003 SizeRef=707,673 Selected=0xBE093A94
 DockSpace       ID=0x6EE41963 Pos=0,36 Size=3840,2124 CentralNode=1 Selected=0x26816F31
 
